hphp/hack/test/typecheck/function_hint_with_variadic_parameter_wrong_type.php.exp
File "function_hint_with_variadic_parameter_wrong_type.php", line 8, characters 22-40:
Invalid argument (Typing[4110])
File "function_hint_with_variadic_parameter_wrong_type.php", line 3, characters 30-31:
Expected int (variadic argument)
File "function_hint_with_variadic_parameter_wrong_type.php", line 5, characters 39-44:
But got string
